--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.6.7",
-    "tslib": "2.3.1",
-    "zone.js": "0.11.4",
-    "@types/node": "12.20.25",
+    "@angular/animations": "12.2.7",
     "@angular/cdk": "12.2.7",
+    "@angular/common": "12.2.7",
+    "@angular/compiler": "12.2.7",
     "@angular/core": "12.2.8",
     "@angular/forms": "12.2.7",
-    "@types/jasmine": "3.8.2",
-    "@angular/common": "12.2.7",
-    "@angular/router": "12.2.7",
-    "@angular/compiler": "12.2.7",
     "@angular/material": "12.2.7",
-    "@angular/animations": "12.2.7",
     "@angular/platform-browser": "12.2.7",
-    "@angular/platform-browser-dynamic": "12.2.7"
+    "@angular/platform-browser-dynamic": "12.2.7",
+    "@angular/router": "12.2.7",
+    "@ngrx/effects": "^12.4.0",
+    "@ngrx/router-store": "^12.4.0",
+    "@ngrx/store": "^12.4.0",
+    "@ngrx/store-devtools": "^12.4.0",
+    "@types/jasmine": "3.8.2",
+    "@types/node": "12.20.25",
+    "rxjs": "6.6.7",
+    "tslib": "2.3.1",
+    "zone.js": "0.11.4"
   },
   "scripts": {
     "ng": "ng",
