--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "^15.0.2",
     "@angular/platform-browser-dynamic": "^15.0.2",
     "@angular/router": "^15.0.2",
+    "@ngrx/effects": "^15.0.0",
+    "@ngrx/router-store": "^15.0.0",
+    "@ngrx/store": "^15.0.0",
+    "@ngrx/store-devtools": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.12.0"
